# Kneron-AI-Project

./: CMakeLists.txt  README.md
app_lib/yolo/src/: kp_app_yolo.c  kp_app_yolo_ipc.h
ex_common/: helper_functions.c  postprocess.c
firmware_development/KL520/: README.txt
firmware_development/KL720/: README.txt
include/: kp_core.h  kp_inference.h  kp_struct.h
kneron_ai_project/: README.md  pubspec.yaml
kneron_ai_project/android/app/: CMakeLists.txt  build.gradle.kts
kneron_ai_project/android/app/src/main/: AndroidManifest.xml
kneron_ai_project/android/app/src/main/java/kl520_usb_plugin/: UsbHostBridge.kt
kneron_ai_project/android/app/src/main/kotlin/com/example/kneron_ai_project/: MainActivity.kt
kneron_ai_project/android/app/src/main/kotlin/kl520_usb_plugin/: UsbHostBridge.kt
kneron_ai_project/ios/Runner/: Info.plist
kneron_ai_project/ios/Runner.xcodeproj/: project.pbxproj
kneron_ai_project/lib/: kl520_ffi.dart  main.dart
kneron_ai_project/linux/: CMakeLists.txt
kneron_ai_project/linux/runner/: my_application.cc
kneron_ai_project/macos/Runner.xcodeproj/: project.pbxproj
kneron_ai_project/test/: widget_test.dart
kneron_ai_project/web/: index.html  manifest.json
kneron_ai_project/windows/: CMakeLists.txt
kneron_ai_project/windows/runner/: Runner.rc  main.cpp
project/: Build Kneron PLUS - Document Center.html  CMakeCache.txt  Makefile  cmake_install.cmake
project/Build Kneron PLUS - Document Center_files/: saved_resource.html
project/app_lib/: Makefile  cmake_install.cmake
project/app_lib/yolo/: Makefile  cmake_install.cmake
project/kl520_android_application/: CMakeCache.txt  CMakeLists.txt  kl520_android_application.cpp  kl520_ffi_interface.h
project/kl520_android_application/build_android/: CMakeCache.txt  Makefile  cmake_install.cmake
project/kl520_android_application/build_android_unix/: CMakeCache.txt  Makefile  cmake_install.cmake
project/kl520_demo_cam_generic_image_inference_drop_frame/: kl520_demo_cam_generic_image_inference_drop_frame.cpp
project/listing_device/: listing_device.c  listing_device.cpp
project/project/: Makefile  cmake_install.cmake
project/project/kl520_demo_cam_generic_image_inference_drop_frame/: Makefile  cmake_install.cmake
project/project/listing_device/: Makefile  cmake_install.cmake
project/src/: Makefile  cmake_install.cmake
project/tools/: Makefile  cmake_install.cmake
project/tools/DFUT/: Makefile  cmake_install.cmake
python/example/: KL520DemoCamGenericImageInferenceDropFrame.py  KL520DemoGenericDataInference.py  KL630DemoCamGenericImageInference.py  KL630DemoCamGenericImageInferenceDropFrame.py  KL630DemoGenericDataInference.py  KL720DemoCamGenericImageInferenceDropFrame.py  KL720DemoGenericDataInference.py  KL730DemoCamGenericImageInferenceDropFrame.py  KL730DemoGenericDataInference.py  KL730DemoGenericImageInferenceNpuTimeoutSetting.py  KL730DemoGenericImageInferencePostYolo.py
python/example/utils/: ExampleHelper.py
python/example_legacy/: KL520DemoGenericInferenceBypassPreProc.py  KL720DemoGenericInferenceBypassPreProc.py
python/example_model_zoo/: KL520KnModelZooGenericImageInferenceFcos.py  KL720KnModelZooGenericDataInferenceMMClsRegNetX.py  KL720KnModelZooGenericDataInferenceMMDetYoloX.py  KL720KnModelZooGenericDataInferenceMMPoseRSN18Hand.py  KL720KnModelZooGenericDataInferenceMMSegSTDC.py  KL720KnModelZooGenericDataInferenceMMTrackingByteTrack.py  KL720KnModelZooGenericImageInferenceFcos.py
python/package/ubuntu/: KneronPLUS-3.1.1-py3-none-any.whl
python/package/windows/: KneronPLUS-3.1.1-py3-none-any.whl
res/firmware/KL630/: VERSION  kp_loader.tar
res/firmware/KL730/: VERSION
src/: kne_reader.c  kp_core.c  kp_errstring.c  kp_inference.c  kp_update_flash.c  kp_usb-1.txt  kp_usb.c  kp_usb_jni.c  kp_usb_jni_bridge.c  kp_usb_log.txt  kp_usb_transport.c  model_descriptor_builder.c  model_descriptor_copier.c  model_reader_utils.c  nef_reader.c  setup_reader.c
src/include/local/: internal_func.h  kneron_kne_c_reader.h  (+5 more)
(+532 files in other folders)
